--- a/Concepts/9.Advfunction.html
+++ b/Concepts/9.Advfunction.html
@@ -106,9 +106,8 @@
         let printDate = () => console.log(new Date());
         buttonElement.addEventListener("click", printDate); */
 
-        let buttonElement = document.getElementById("my-button");
-        buttonElement.addEventListener("focus", () => console.log("Focused"));
-        buttonElement.addEventListener("blur", () => console.log("Blurred"));
+        // foreach loop: A method that allows us to iterate over an array and execute a function for each element in the array. The forEach method takes a callback function as an argument, which is executed for each element in the array.
+
 
     </script>
     
