--- a/Projects/11-Exercise.html
+++ b/Projects/11-Exercise.html
@@ -43,7 +43,7 @@
         runTwice(sum);  */                      // Output: 9, 13
 
         //Create a button which should grow double in size on clicking after 2 seconds.
-        function sizeDouble(){
+        /* function sizeDouble(){
             document.querySelector('.my-buttons').classList.add('js-my-button');
         }
 
@@ -53,7 +53,18 @@
         function sizeDouble2(){
             let buttonElement = document.querySelector('.my-button');
             buttonElement.classList.add('js-my-button');
-        }
+        } */
+
+        //Create a function that sums an array of numbers. Do this using a for-each loop.
+        /* let arr =[1, 2, 3, 4, 5];
+        let sum = 0;
+        arr.forEach(num => sum += num);
+        console.log(sum); */  // Output: 15
+
+        //Create a function that takes an array of numbers and return their squares using map function.
+        /* let arr = [1, 2, 3, 4, 5];
+        let squares = arr.map(num => num * num);
+        console.log(squares); */ // Output: [1, 4, 9, 16, 25]
 
     </script>
 </body>
